correcting effin overlaps

--- a/tt-style.css
+++ b/tt-style.css
@@ -113,7 +113,7 @@ float: left;
   height: 20px; !important
 }
 
-.inner-td{
+td{
   overflow: hidden;
   display: table-cell;
   white-space: nowrap; !important
